[package]
name = "tack"
version = "0.1.0"
edition = "2021"
description = "A tactile terminal task app for fast capture and triage"
license = "MIT"
repository = "https://github.com/FrederikLizakJohansen/tack"

[dependencies]
anyhow = "1.0"
arboard = "3.4"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
